testsuite/tests/ghc-regress/indexed-types/should_fail/Simple6.hs
{-# OPTIONS -findexed-types #-}

module ShouldFail where

-- must fail: Repeated type variable
class C4 a where
  data S4 a a :: *
